@@ -157,6 +157,15 @@
    `(gnus-summary-normal-ticked ((t (:foreground ,fgdefault :weight bold))))
    `(gnus-summary-normal-unread ((t (:foreground ,fgdefault))))
    `(gnus-summary-selected ((t (:background ,bgblue :weight bold))))
+   `(helm-M-x-key ((t (:underline unspecified :foreground ,fgpink :weight bold))))
+   `(helm-buffer-directory ((t (:background unspecified :foreground ,fgblue :weight bold))))
+   `(helm-buffer-file ((t (:inherit default))))
+   `(helm-buffer-not-saved ((t (:foreground ,fgcyan))))
+   `(helm-buffer-process ((t (:foreground ,fggreen))))
+   `(helm-buffer-size ((t (:foreground ,fgorange))))
+   `(helm-match ((t (:foreground ,fgbright :weight bold))))
+   `(helm-selection ((t (:distant-foreground unspecified :background ,bgblue))))
+   `(helm-source-header ((t (:font-family unspecified :height 1.1 :weight bold :foreground ,fgturquoise :background unspecified))))
    `(highlight ((t (:background ,bgcyan))))
    `(highlight-80+ ((t (:underline (:color ,fgred :style wave) :background unspecified))))
    `(hl-indent-face ((t (:inherit unspecified :background ,bgdim))))
